syntax = "proto3";
package filebox;

option go_package = "./pkg/proto";

service FileboxService {
    rpc SendFile(SendFileRequest) returns (SuccessMessage) {}
    rpc UpdateFile(UpdateFileRequest) returns (SuccessMessage) {}
    rpc GetFile(GetFileRequest) returns (GetFileResponse) {}
    rpc GetListOfAllFiles(GetListOfAllFilesRequest) returns (GetListOfAllFilesResponse) {}
    rpc DeleteFile(DeleteFileRequest) returns (SuccessMessage) {}
    rpc SendFileToPerson(SendFileToPersonRequest) returns (SuccessMessage) {}
  }

// REQUESTS

message SendFileRequest {
    string username = 1;
    string fileName = 2;
    bytes file = 3;
  }
  
  message UpdateFileRequest {
    string username = 1;
    string fileName = 2;
    bytes file = 3;
  }

  message GetFileRequest {
    string username = 1;
    string fileName = 2;
  }

  message GetListOfAllFilesRequest {
    string username = 1;
  }
   
  message DeleteFileRequest {
    string username = 1;
    string fileName = 2;
  }
  
  message SendFileToPersonRequest {
    string username = 1;
    string email = 2;
    string senderUsername = 3;
    bytes file = 4;
  }

  // RESPONSES
  message GetFileResponse {
    string fileURL = 1;
  }

  message SuccessMessage {
    string message = 1;
  }

  message GetListOfAllFilesResponse {
    repeated string allFiles = 1;
  }
 